{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 1817,
  "lineage": "c1f75dd7-541c-e6cd-b33b-90b1be84a54d",
  "resources": [
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"data\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"management\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"production\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_no_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcs[\"security\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}